// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Login page should match snapshot when activeLoaders 1`] = `
<Connect
  actions={
    Object {
      "addNumber": [Function],
      "addSubValueToObject": [Function],
      "addToArray": [Function],
      "addToObject": [Function],
      "removeFromArray": [Function],
      "removeFromObject": [Function],
      "setStoreState": [Function],
    }
  }
  activeLoaders={1}
  addNumber={[MockFunction]}
  addToObject={[MockFunction]}
  mapToProps={[Function]}
>
  <Component />
</Connect>
`;

exports[`Login page should match snapshot when no activeLoaders 1`] = `
<Connect
  actions={
    Object {
      "addNumber": [Function],
      "addSubValueToObject": [Function],
      "addToArray": [Function],
      "addToObject": [Function],
      "removeFromArray": [Function],
      "removeFromObject": [Function],
      "setStoreState": [Function],
    }
  }
  activeLoaders={0}
  addNumber={[MockFunction]}
  addToObject={[MockFunction]}
  mapToProps={[Function]}
>
  <Component />
</Connect>
`;
